recursion.lessons.recursion.koch.Koch.scala.error
Koch:23: error: ';' expected but 'else' found.
	else snowSide(levels-1,length / 3.)
        ^Koch:28: error: expected start of definition
	override def run() {
                 ^Koch:31: error: Unmatched closing brace '}' ignored here
}
^